--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="https://thebestclicker.github.io/danify/pics/dan.jpg" />
     <meta property="og:description" content="Dan snurrer rundt" />
+    <meta property="og:url" content="https://thebestclicker.github.io/danify/" />
+    <meta property="og:title" content="Dan" />
+    <meta property="fb:app_id" content="https://thebestclicker.github.io/danify/" />
+    
     <title>Danify</title>
     <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
     <link rel="shortcut icon" type="image/x-icon" href="pics/favicon.ico" />
