--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://thebestclicker.github.io/danify/pics/dan.jpg" />
+    <meta property="og:image" content="https://thebestclicker.github.io/danify/pics/johannes.jpg" />
     <meta property="og:description" content="Dan snurrer rundt" />
     <meta property="og:url" content="https://thebestclicker.github.io/danify/" />
     <meta property="og:title" content="Dan" />
